# backend

./: .env.example  README.md  initial_data.py  pyproject.toml  pytest.ini  start.py
app/: main.py
app/api/: deps.py
app/core/: auth_cookies.py  cache.py  config.py  data_scope.py  db.py  decorator.py  enums.py  event_bus.py  exception_handlers.py  exceptions.py  logger.py  metrics.py  middleware.py  permissions.py  rate_limiter.py  security.py  session_store.py  token_store.py
app/crud/: base.py  crud_dept.py  crud_log.py  crud_menu.py  crud_role.py  crud_user.py
app/models/: __init__.py  base.py  log.py  rbac.py  user.py
app/schemas/: common.py  dashboard.py  dept.py  log.py  menu.py  permission.py  role.py  session.py  token.py  user.py
app/services/: auth_service.py  dashboard_service.py  dept_service.py  log_service.py  menu_service.py  permission_service.py  role_service.py  session_service.py  user_service.py
app/subscribers/: __init__.py  log_subscriber.py
docs/: api.md  rbac_seed.toml  test_depts.md
tests/: __init__.py  conftest.py
tests/test_api/: __init__.py  test_auth.py  test_auth_logout.py  test_auth_refresh.py  test_dashboard.py  test_logs.py  test_menus.py  test_menus_recycle.py  test_permissions.py  test_role_menus.py  test_roles.py  test_roles_recycle.py  test_sessions.py  test_user_roles.py  test_users.py  test_users_permission_control.py  test_users_recycle.py  test_users_restore.py  test_users_update.py
tests/test_core/: test_cache.py  test_decorator_and_event_bus.py  test_logger.py
tests/test_crud/: __init__.py  test_crud_log.py  (+3 more)
(+22 files in other folders)
